--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <script src="script.js"></script>
 </body>
 
